<resources>
    <string name="app_name">Car Care Markets</string>
    <string name="login">Login</string>
    <string name="complete">Complete</string>
    <string name="skip">Skip</string>
    <string name="create_an_account">Create an account</string>
    <string name="Save">Save</string>
    <string name="edit_profile_settings">Edit Profile Settings</string>
    <string name="complete_your_Profile">Complete your Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="wrong_password">wrong password</string>
    <string name="wrong_email">wrong Email Address</string>
    <string name="name_helper">type your name like Emad</string>
    <string name="address_helper">75 Mohamed Ali street Flat 6 </string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="email_helper">type your email *</string>
    <string name="password_helper">required be more than 8 letters- numbers</string>
    <string name="confirm_password">confirm password</string>
    <string name="phone">Phone</string>
    <string name="passwords_not_same">Passwords is not the same</string>
    <string name="name_is_less_than_3">Name should be more 2 characters</string>
    <string name="email_is_not_valid">\' is not a valid email</string>
    <string name="phone_invalid">Phone number is invalid</string>
    <string name="successfully_registered">You have successfully registered</string>
    <string name="email_already_exists">this Email Already exists</string>
    <string name="ERROR">ERROR</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="Invalid_email_password">Invalid email or password</string>
    <string name="governorate_helper">Select your governorate</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="service">Service : </string>
    <string name="products">Products List </string>
    <string name="services">Services </string>
    <string name="service_provider">Service Provider</string>
    <string name="service_providers">Service Providers</string>
    <string name="stores">Stores</string>
    <string name="cart">Cart</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="hello">Hello</string>
    <string name="rate_this_sp">Rate This Service Provider</string>
    <string name="write_your_experience">Write Your Experience</string>
    <string name="experience">experience</string>
    <string name="writeYourExperience">Write Your Experience</string>
    <string name="review">Review</string>
    <string name="delete">delete</string>
    <string name="price_range">Price range : </string>
    <string name="profile_settings">Profile Settings</string>
    <string name="user_orders">Orders</string>
    <string name="languages">languages</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="logout">Logout</string>
    <string name="order">order</string>
    <string name="no_item">there is no products in the cart</string>

</resources>