<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.carecaremarkets.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_serviceProvider"
        android:name="com.example.carecaremarkets.ui.serviceprovider.ServiceProviderFragment"
        android:label="@string/service_provider"
        tools:layout="@layout/fragment_service_provider" />

    <fragment
        android:id="@+id/navigation_stores"
        android:name="com.example.carecaremarkets.ui.stores.StoresFragment"
        android:label="@string/stores"
        tools:layout="@layout/fragment_stores" />
</navigation>