<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/resultsAppbar"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:background="@color/black"
        android:fitsSystemWindows="true"
        android:theme="@style/actionBarTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/resultsCollapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/black"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/cart">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/resultsToolbar3"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/back_arrow">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/noItemTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_item"
        android:textSize="24sp"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ordersNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16sp"
                android:paddingTop="8sp"
                android:paddingEnd="8sp"
                android:text="@string/products"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/userProductsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="300sp">

            </androidx.recyclerview.widget.RecyclerView>

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/orderButton"
                style="@style/Widget.MaterialComponents.TimePicker.Button"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/black"
                android:backgroundTintMode="add"
                android:insetTop="0sp"
                android:insetBottom="0sp"
                android:onClick="orderProducts"
                android:padding="10sp"
                android:text="@string/order"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="30sp"
                app:rippleColor="#FFFFFF"
                app:strokeColor="@color/black"
                app:strokeWidth="1sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>